Fix partners bar on mobile

--- a/src/styles/sections/_s-hero.sass
+++ b/src/styles/sections/_s-hero.sass
@@ -35,7 +35,7 @@
 
 
         +mobile
-            padding: 8vw 0 23vw
+            padding: 8vw 0 43vw
 
         +tablet-desktop
             padding: 8vw 0 23vw
